[tool.poetry]
name = "gitter"
version = "0.1.0"
description = ""
authors = ["msiwek43 <msiwek43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.18"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
